# python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-01-30-query-cache-python-design.md  2026-01-31-python-query-cache-implementation.md
src/t87s/: __init__.py  async_client.py  client.py  duration.py  primitives.py  query_awaitable.py  query_cache.py  query_cache_spike12.py  query_cache_spike17.py  schema.py  tags.py  typed_tag.py  types.py
src/t87s/adapters/: __init__.py  base.py  cloud.py  memory.py  redis.py  upstash.py
tests/: conftest.py  test_async_client.py  test_client.py  test_duration.py  test_entries.py  test_exports.py  test_integration.py  test_primitives.py  test_query_cache.py  test_schema.py  test_tags.py  test_typed_tag.py
tests/adapters/: test_cloud.py  test_memory.py  test_redis.py
