[project]
name = "t87s"
version = "0.0.0"
description = "Declarative cache invalidation for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "t87s" }]
keywords = ["cache", "invalidation", "redis", "tags"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
upstash = ["upstash-redis>=1.0.0"]
cloud = ["httpx>=0.27.0"]
all = ["t87s[redis,upstash,cloud]"]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "testcontainers[redis]>=4.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/t87s"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
